--- a/Iris Dataset 1.ipynb
+++ b/Iris Dataset 1.ipynb
@@ -20,10 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "IRIS DATASET\n",
-    "'''\n",
-    "\n",
     "# required libraries\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -62,7 +58,7 @@
    ],
    "source": [
     "# read the dataset\n",
-    "data = pd.read_csv('E:\\MCED\\Data Science And Analysis\\Data\\iris dataset\\iris.csv')\n",
+    "data = pd.read_csv('iris.csv')\n",
     "print(data.head())\n",
     "\n",
     "print('\\n\\nColumn Names\\n\\n')\n",
